<resources>
    <string name="app_name">Marvel Universe</string>

    <!--    Main Activity -->
    <string name="setting_text">Setting</string>
    <!--  MainActivity  Bottom Toolbar-->
    <string name="search_optionMenu">Search</string>
    <string name="refresh_optionMenu">Refresh</string>
    <string name="send_feedback_text">Send Feedback</string>


    <!--    Dark Mode -->
    <string name="dark_mode_text" >Dark Mode</string>
    <string name="is_dark_mode_text" >isDarkMode</string>
    <string name="off_text" >Off</string>
    <string name="on_text" >On</string>
    <string name="automatic_at_sunset_text" >Automatic at sunset</string>
    <string name="set_by_battery_saver_text" >Set by battery saver</string>
    <string name="system_default_text">System Default</string>


    <!--    Send Feedback-->
    <string name="add_Screenshot_Small_text">Add Screenshot Small</string>
    <string name="add_Screenshot_Large_text">Add Screenshot Large</string>
    <string name="close_Image_text">Close Image</string>
    <string name="feedbackEditTextHint">Please write your feedback</string>
    <string name="feedbackEditTextError">Please write something in feedback</string>
    <string name="systemInfo_text">Your System Info will be send to our developer team</string>
    <string name="add_screenshot_text">+ Add Screenshot</string>
    <string name="ok_text">OK</string>




    <!--    System Info-->
    <string name="system_info_text"> System Info </string>
    <string name="device_text">Device : </string>
    <string name="os_api_level_text">Os Api Level : </string>
    <string name="language_text">Language : </string>
    <string name="total_memory_text">Total Heap Memory : </string>
    <string name="free_memory_text">Free Heap Memory : </string>
    <string name="screen_Text">Screen Size : </string>
    <string name="network_type_text">Network Type : </string>
    <string name="app_version_text">App Version : </string>



    <!--    Network Provider-->
    <string name="wifi_text">Wifi</string>
    <string name="mobile_data_text">Mobile Data</string>
    <string name="vpn_text">Vpn</string>
    <string name="no_internet_text">No Internet</string>


    <!--    Navigation Drawer Bottom Sheet-->
    <string name="developer_name">Created by Sudo Ajay</string>
    <string name="rate_use_text">Rate-Us</string>
    <string name="more_app_text">More App</string>
    <string name="share_code_text">Share Code</string>
    <string name="workOnProgress_text">Work On Progress</string>

<!--    Click back to exit-->
    <string name="click_back_text">Click Back Again To Exit</string>


    <!--    Dark Mode Bottom Sheet-->
    <string name="dark_mode_trans_text">Dark Mode</string>
    <string name="off_trans_text">Off</string>
    <string name="on_trans_text">On</string>
    <string name="automatic_at_sunset_trans_text">Automatic at sunset</string>
    <string name="set_by_battery_saver_trans_text">Set by battery saver</string>
    <string name="system_default_trans_text">System Default</string>

<!--    Error-->
    <string name="somethingWentWrong_text">Something Went Wrong</string>
    <string name="noInternetConnection_text">No Internet Connection</string>


<!--    Marvel Character-->
    <string name="noDescription_text">This character has no description. </string>
    <string name="comic_text">Comics</string>
    
<!--    RecyclerView-->
    <string name="characterComicIsEmpty_text">This character has no comics.</string>
    <string name="characterIsEmpty_text">There is no character with this name.</string>



</resources>