<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="navigation"
            type="com.oyelabs.marvel.universe.main.bottomSheet.NavigationDrawerBottomSheet" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainBgColor">



        <View
            android:id="@+id/view"
            android:layout_width="35dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_sheet_top_effect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appInfo_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/appName_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:layout_marginTop="@dimen/text_view_margin_gap"
                android:layout_marginBottom="@dimen/text_view_margin_gap"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/appImage_ImageView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="@dimen/gap_margin_left_right" />

            <ImageView
                android:id="@+id/appImage_ImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:src="@drawable/app_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                android:layout_marginLeft="@dimen/gap_margin_left_right" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rateUs_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            android:onClick="@{() -> navigation.rateUs()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appInfo_ConstraintLayout">

            <TextView
                android:id="@+id/rateUs_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:layout_marginTop="@dimen/text_view_margin_gap"
                android:layout_marginBottom="@dimen/text_view_margin_gap"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/rate_use_text"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/rateUsImage_ImageView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="@dimen/gap_margin_left_right" />

            <ImageView
                android:id="@+id/rateUsImage_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_rate_us"
                app:tint="@color/headingNormalTextColor"
                tools:ignore="ContentDescription"
                android:layout_marginLeft="@dimen/gap_margin_left_right" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/moreApp_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            android:onClick="@{() -> navigation.moreApp()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rateUs_ConstraintLayout">

            <TextView
                android:id="@+id/moreApp_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:layout_marginTop="@dimen/text_view_margin_gap"
                android:layout_marginBottom="@dimen/text_view_margin_gap"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/more_app_text"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/moreAppImage_ImageView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="@dimen/gap_margin_left_right" />

            <ImageView
                android:id="@+id/moreAppImage_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_more_app"
                app:tint="@color/headingNormalTextColor"
                tools:ignore="ContentDescription"
                android:layout_marginLeft="@dimen/gap_margin_left_right" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/shareApk_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            android:onClick="@{() -> navigation.shareApk()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreApp_ConstraintLayout">

            <TextView
                android:id="@+id/shareCode_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:layout_marginLeft="@dimen/gap_margin_left_right"
                android:layout_marginTop="@dimen/text_view_margin_gap"
                android:layout_marginBottom="@dimen/text_view_margin_gap"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/share_code_text"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/shareApk_ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/shareApk_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:layout_marginLeft="@dimen/gap_margin_left_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_share_app"
                app:tint="@color/headingNormalTextColor"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sendFeedback_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            android:onClick="@{() -> navigation.sendFeedback()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shareApk_ConstraintLayout">

            <TextView
                android:id="@+id/sendFeedback_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:layout_marginTop="@dimen/text_view_margin_gap"
                android:layout_marginBottom="@dimen/text_view_margin_gap"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/send_feedback_text"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/sendFeedbackImage_ImageView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="@dimen/gap_margin_left_right" />

            <ImageView
                android:id="@+id/sendFeedbackImage_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_send_feedback"
                app:tint="@color/headingNormalTextColor"
                tools:ignore="ContentDescription"
                android:layout_marginLeft="@dimen/gap_margin_left_right" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/aboutMe_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            android:onClick="@{() -> navigation.developerPage()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendFeedback_ConstraintLayout">

            <TextView
                android:id="@+id/aboutMe_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:layout_marginTop="@dimen/text_view_margin_gap"
                android:layout_marginBottom="@dimen/text_view_margin_gap"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/developer_name"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/aboutMeImage_ImageView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="@dimen/gap_margin_left_right" />

            <ImageView
                android:id="@+id/aboutMeImage_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_me"
                app:tint="@color/headingNormalTextColor"
                tools:ignore="ContentDescription"
                android:layout_marginLeft="@dimen/gap_margin_left_right" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginBottom="12dp"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutMe_ConstraintLayout" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{navigation.getVersionName}"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutMe_ConstraintLayout"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>